samples/_failures_safe/1761542641_46482d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dbfc19d7.c: In function ‘main’:
./samples/SAFE/__tmp_dbfc19d7.c:164:5: error: expected expression at end of input
  164 |     if (!tokens)
      |     ^~
./samples/SAFE/__tmp_dbfc19d7.c:164:5: error: expected declaration or statement at end of input
